fixed alignment, switch function works

--- a/style.css
+++ b/style.css
@@ -26,30 +26,30 @@
 /* Input Field Styling  */
  /* label color */
  .input-field label {
-  color: #000;
+  color: #29b6f6;
 }
 /* label focus color */
 .input-field input[type=text]:focus + label {
-  color: #000;
+  color: #01579b
 }
 /* label underline focus color */
 .input-field input[type=text]:focus {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #29b6f6;
   box-shadow: 0 1px 0 0 #000;
 }
 /* valid color */
 .input-field input[type=text].valid {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #29b6f6;
   box-shadow: 0 1px 0 0 #000;
 }
 /* invalid color */
 .input-field input[type=text].invalid {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #ff1744;
   box-shadow: 0 1px 0 0 #000;
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #000;
+  color :#29b6f6;
 }
 
 
